@@ -2,16 +2,16 @@ package com.d109.reper.controller;
 
 import com.d109.reper.domain.Store;
 import com.d109.reper.repository.StoreRepository;
+import com.d109.reper.request.StoreRequestDto;
+import com.d109.reper.response.StoreResponseDto;
 import com.d109.reper.service.StoreService;
 import io.swagger.v3.oas.annotations.Operation;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,31 +23,48 @@ public class StoreController {
 
     private final StoreService storeService;
 
+    // 매장 정보 등록
+    @PostMapping
+    @Operation(summary = "매장 정보 등록")
+    public ResponseEntity<StoreResponseDto> createStore(@RequestBody StoreRequestDto storeRequestDto) {
+        StoreResponseDto response = storeService.createStore(storeRequestDto);
+        return ResponseEntity.ok(response);
+    }
+
+    // 매장 검색
+
+    // 매장 정보 조회(단건)
+    @GetMapping("/{storeId}")
+    @Operation(summary = "매장 정보 조회(단건)")
+    public ResponseEntity<StoreResponseDto> getStore(@PathVariable Long storeId) {
+        StoreResponseDto response = storeService.getStore(storeId);
+        return ResponseEntity.ok(response);
+    }
+
+
+    // 매장 정보 삭제
+    @DeleteMapping("/{storeId}")
+    @Operation(summary = "매장 정보 삭제")
+    public ResponseEntity<String> deleteStore(@PathVariable Long storeId) {
+        storeService.deleteStore(storeId);
+        return ResponseEntity.ok().body("Success delete store");
+    }
+
+
     // 사장님이 가진 모든 매장 조회
     @GetMapping("/owner/{userId}")
     @Operation(summary = "OWNER인 {userId}에 해당하는 모든 store를 조회합니다.")
-    public ResponseEntity<List<StoreResponseAll>> findNotices(
+    public ResponseEntity<List<StoreResponseDto>> findNotices(
             @PathVariable Long userId) {
 
         List<Store> stores = storeService.findStores(userId);
 
-        List<StoreResponseAll> response = stores.stream()
-                .map(store -> new StoreResponseAll(store.getStoreId(), store.getStoreName()))
-                .collect(Collectors.toList());
+        List<StoreResponseDto> response = stores.stream()
+                .map(StoreResponseDto::new)
+                .toList();
 
         return ResponseEntity.ok(response);
     }
 
 
-    // ResponseBody
-    @Getter
-    public static class StoreResponseAll {
-        private final Long storeId;
-        private final String storeName;
-
-        public StoreResponseAll (Long storeId, String storeName) {
-           this.storeId = storeId;
-           this.storeName = storeName;
-        }
-    }
 }
